fix: scrollbar space issue

--- a/haikyuu-app/src/css/App.css
+++ b/haikyuu-app/src/css/App.css
@@ -1,9 +1,11 @@
 body {
   flex: 1;
   padding: 0;
+  margin: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
   overflow-x: hidden;
+  scrollbar-gutter: stable;
 }
